--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@skynexui/components": "^1.23.9",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "name": "react-alura",
   "version": "1.0.0",
